--- a/BFKit/Languages/en.lproj/BFKit.strings
+++ b/BFKit/Languages/en.lproj/BFKit.strings
@@ -46,7 +46,7 @@
 "SATURDAY" = "Saturday";
 
 // Months
-"GENUARY" = "Genuary";
+"JANUARY" = "January";
 "FEBRUARY" = "February";
 "MARCH" = "March";
 "APRIL" = "April";
