--- a/BFKit/Languages/it.lproj/BFKit.strings
+++ b/BFKit/Languages/it.lproj/BFKit.strings
@@ -46,7 +46,7 @@
 "SATURDAY" = "Sabato";
 
 // Months
-"GENUARY" = "Gennaio";
+"JANUARY" = "Gennaio";
 "FEBRUARY" = "Febbraio";
 "MARCH" = "Marzo";
 "APRIL" = "Aprile";
