--- a/BFKit/Languages/uk.lproj/BFKit.strings
+++ b/BFKit/Languages/uk.lproj/BFKit.strings
@@ -25,42 +25,42 @@
 //  SOFTWARE.
 
 // Generals
-"OK" = "Ok";
-"CONTINUE" = "Continue";
-"CANCEL" = "Cancel";
-"DONE" = "Done";
-"CLOSE" = "Close";
-"OPEN" = "Open";
-"YES" = "Yes";
-"NO" = "No";
+"OK" = "Добре";
+"CONTINUE" = "Продовжити";
+"CANCEL" = "Відміна";
+"DONE" = "Готово";
+"CLOSE" = "Закрити";
+"OPEN" = "Відкрити";
+"YES" = "Так";
+"NO" = "Ні";
 
 // Days
-"TODAY" = "Today";
-"TOMORROW" = "Tomorrow";
-"SUNDAY" = "Sunday";
-"MONDAY"= "Monday";
-"TUERSDAY" = "Tuesday";
-"WEDNESDAY" = "Wednesday";
-"THURSDAY" = "Thursday";
-"FRIDAY" = "Friday";
-"SATURDAY" = "Saturday";
+"TODAY" = "Сьогодні";
+"TOMORROW" = "Завтра";
+"SUNDAY" = "Неділя";
+"MONDAY"= "Понеділок";
+"TUERSDAY" = "Вівторок";
+"WEDNESDAY" = "Середа";
+"THURSDAY" = "Четвер";
+"FRIDAY" = "П'ятниця";
+"SATURDAY" = "Субота";
 
 // Months
-"JANUARY" = "January";
-"FEBRUARY" = "February";
-"MARCH" = "March";
-"APRIL" = "April";
-"MAY" = "May";
-"JUNE" = "June";
-"JULY" = "July";
-"AUGUST" = "August";
-"SEPTEMBER" = "September";
-"OCTOBER" = "October";
-"NOVEMBER" = "November";
-"DECEMBER" = "December";
+"JANUARY" = "Січень";
+"FEBRUARY" = "Лютий";
+"MARCH" = "Березень";
+"APRIL" = "Квітень";
+"MAY" = "Травень";
+"JUNE" = "Червень";
+"JULY" = "Липень";
+"AUGUST" = "Серпень";
+"SEPTEMBER" = "Вересень";
+"OCTOBER" = "Жовтень";
+"NOVEMBER" = "Лістопад";
+"DECEMBER" = "Грудень";
 
 // Time zones
-"NIGHT" = "Night";
-"MORNING" = "Morning";
-"AFTERNOON" = "Afternoon";
-"EVENING" = "Evening";
+"NIGHT" = "Ніч";
+"MORNING" = "Ранок";
+"AFTERNOON" = "Друга половина дня";
+"EVENING" = "Вечір";
