--- a/BFKit/Languages/id.lproj/BFKit.strings
+++ b/BFKit/Languages/id.lproj/BFKit.strings
@@ -29,6 +29,8 @@
 "CONTINUE" = "Lanjutkan";
 "CANCEL" = "Batal";
 "DONE" = "Selesai";
+"ERROR" = "Kesalahan";
+"WARNING" = "Peringatan";
 "CLOSE" = "Tutup";
 "OPEN" = "Buka";
 "YES" = "Ya";
@@ -64,3 +66,9 @@
 "MORNING" = "Pagi";
 "AFTERNOON" = "Siang";
 "EVENING" = "Petang";
+
+// Authorization
+"AUTHENTICATION" = "Otentikasi";
+"AUTHORIZATION" = "Otorisasi";
+"AUTHORIZED" = "Resmi";
+"NOT_OWNER" = "Tidak pemilik";
