Add double quotation marks for the key CLOSE

--- a/Source/Languages/pt-Br.lproj/BFKit.strings
+++ b/Source/Languages/pt-Br.lproj/BFKit.strings
@@ -31,7 +31,7 @@
 "DONE" = "Concluído";
 "ERROR" = "Erro";
 "WARNING" = "Aviso";
-"CLOSE" = "Fechar;
+"CLOSE" = "Fechar";
 "OPEN" = "Abrir";
 "YES" = "Sim";
 "NO" = "Não";
